<resources>
    <string name="app_name">MyAndroidApplication</string>
    <string name="bmi_calculator_developed_by_r_Upper">BMI Calculator Developed By @r</string>
    <string name="enter_weight_in_kg">Enter Weight in (KG)</string>
    <string name="enter_height_in_cm">Enter Height in CM</string>
    <string name="calculate">Calculate</string>
    <string name="bmi_value_is_Message">BMI Value is -</string>
    <string name="bmi_value_is">BMI Value is -</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="whatsapp">whatsapp</string>
    <string name="twitter">twitter</string>
    <string name="youtube">youtube</string>
</resources>